deploy/api/api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: mightycalc-api-container
        image: aleskov/mightycalc-api:local
        ports:
        - name: http
          containerPort: 80
        - name: akka
          containerPort: 2555
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      terminationGracePeriodSeconds: 10
