deploy/api/mightycalc-api-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mightycalc-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mightycalc-api
    spec:
      containers:
      - name: mightycalc-api-container
        image: aleskov/mightycalc
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
      terminationGracePeriodSeconds: 600
