deploy/api/api-svc-external-dd.yaml

apiVersion: v1
kind: Service
metadata:
  name: api-svc-external
  labels:
    app: api-svc-external
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30010
    name: http
  selector:
    app: api
