deploy/api/api-svc-external-gke.yaml

apiVersion: v1
kind: Service
metadata:
  name: api-svc-external
  labels:
    app: api-svc-external
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: api
