deploy/api/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    app: api-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    name: mightycalc-http
  selector:
    app: api
