deploy/api/mightycalc-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mightycalc-svc
  labels:
    app: mightycalc
spec:
  ports:
  - port: 80
    protocol: TCP
    name: mightycalc-http
  selector:
    app: mightycalc
